the overflow condition creating issue with screen

--- a/calculator.css
+++ b/calculator.css
@@ -30,7 +30,7 @@ body
     text-align: right;
     padding: 20px 5px;
     max-width: 400px;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .calc-button{
